2006-11-21  Janis Johnson  <janis187@us.ibm.com>

	* config/dfp-bit.h (CONTEXT_TRAPS, CONTEXT_ERRORS, DFP_RAISE): Delete.
	* config/dfp-bit.c (dfp_unary_op, dfp_binary_op, dfp_compare_op,
	DFP_TO_DFP, INT_TO_DFP, BFP_TO_DFP): Remove calls to DFP_RAISE.

	* config/dfp-bit.c (dfp_binary_func): Fix typedef.

2006-11-21  Douglas Gregor <doug.gregor@gmail.com>

        * c-common.h (enum rid): Add RID_STATIC_ASSERT.

2006-11-21  Richard Guenther  <rguenther@suse.de>

	* tree-vectorizer.h (NUM_PATTERNS): Increase.
	* tree-vect-patterns.c (vect_vect_recog_func_ptrs): Add
	vect_recog_pow_pattern.
	(vect_recog_pow_pattern): New function.

2006-11-21  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/bfin/bfin.opt (mstack-check-l1): New.
	* doc/invoke.texi (Blackfin Options): Document it.
	* config/bfin/bfin.c (bfin_expand_prologue): Generate code to use
	stack bounds in L1 memory if the new option is enabled.
	(override_options): Don't allow combinations of -fstack-limit and
	-mstack-check-l1.
	(add_to_reg): Renamed from add_to_sp.  All callers changed.  Lose some
	dead code.

	* config/bfin/bfin.c (hard_regno_mode_ok): Only allow first 31
	regs for DImode.
	(bfin_register_move_cost): Bump costs if trying to move plain
	integer values through accumulators.

2006-11-21  Ben Elliston  <bje@au.ibm.com>

	* config/spu/spu.c (spu_expand_vector_init): Initialise x.

2006-11-20  Trevor Smigiel <Trevor_Smigiel@playstation.sony.com>
	    Russell Olsen <Russell_Olsen@playstation.sony.com>
	    Dmitri Makarov <Dmitri_Makarov@playstation.sony.com>
	    Yukishige Shibata <shibata@rd.scei.sony.co.jp>
	    Nobuhisa Fujinami <fnami@rd.scei.sony.co.jp>
	    Takeaki Fukuoka <fukuoka@rd.scei.sony.co.jp>
	    Andrew Pinski <Andrew_Pinski@playstation.sony.com>

	* config.gcc: Add target for SPU.
	* config/spu/constraints.md: New file.
	* config/spu/crt0.c: New file.
	* config/spu/crtend.c: New file.
	* config/spu/crti.asm: New file.
	* config/spu/crtn.asm: New file.